# Linguisage-Literature

./: .env  .env-example  .gitignore  Dockerfile  Jenkinsfile  README.md  app_entry_point.sh  config.py  docker-compose.yml  entry_point.sh  main.py  pyproject.toml  readme.md  requirements.txt  test_converter.py
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2024_01_31_1729-c86422fc54b8_.py  2024_01_31_1741-025280ebb29b_.py  2024_01_31_1742-3cab4db37373_.py  2024_02_12_2240-1951d1969f75_.py
app/: database.py
app/Bookmark/: models.py
app/Literature/: DAO.py  models.py  router.py  schemas.py
app/Literature/LiteratureProcessing/: TextExtraction.py
app/Literature/TextManager/: text_manager.py
app/Words/: DAO.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 667756347ffb_add_bookmarks_table2.py  837326013e81_add_bookmarks_table4.py  8575243375ae_add_bookmarks_table.py  99baf6c693c4_add_bookmarks_table.py  d399184a6bf4_add_bookmarks_table3.py
letsencrypt/: readme.txt
sandbox/: converter.py  test cd.py  test_converter.py
src/admin/: __init__.py  tables.py
src/api_v1/: __init__.py
src/api_v1/books/: book_storage.py  crud.py  dependencies.py  schemas.py  utils.py  views.py
src/api_v1/documents/: schemas.py  views.py
src/background_tasks/: __init__.py  celery.py  tasks.py
src/core/: config.py
src/core/database/: __init__.py  base.py  db_helper.py
src/utils/: __init__.py  epub_cover.py  make_static_folders.py
src/utils/fb2_converter/: __init__.py  convert.py
src/utils/lifespan/: __init__.py  lifespan.py  (+1 more)
(+4 files in other folders)
