[tool.poetry]
name = "linguisage-literature"
version = "0.1.0"
description = ""
authors = ["AMDisPOWER <MyNameIIIyPuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"
aiohttp = "^3.9.3"
opencv-python = "^4.9.0.80"
pdfplumber = "^0.10.3"
python-multipart = "^0.0.6"
mypy = "^1.8.0"
lxml = "^5.1.0"
ebookmeta = "^1.2.11"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"
sqladmin = "^0.16.0"
pypandoc = "^1.15"
pdf2docx = "^0.5.8"
pandoc = "^2.4"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
types-pillow = "^10.2.0.20240125"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
